[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
nix = "0.21.0"
log = { version = "0.4.14", features = ["std"] }
lazy_static = "1.4.0"
chrono = "0.4"
